--- a/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
+++ b/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3hs-8V-abz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3hs-8V-abz">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -271,26 +271,88 @@
                         <viewControllerLayoutGuide type="top" id="VRr-mY-7ka"/>
                         <viewControllerLayoutGuide type="bottom" id="qCU-tM-pqV"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="AWe-yT-xWG">
+                    <view key="view" contentMode="scaleToFill" id="AWe-yT-xWG" customClass="GradientView" customModule="Challenge_Final" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mia-xZ-V0E">
-                                <rect key="frame" x="191" y="47" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mia-xZ-V0E">
+                                <rect key="frame" x="0.0" y="260" width="300" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="0.5549015410958904" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="FpE-fK-Gwl"/>
+                                </constraints>
+                                <state key="normal" title="Cancelar">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="extiBtnAction:" destination="0GI-og-LI2" eventType="touchUpInside" id="kj1-Ra-rd5"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0fK-rJ-ri4">
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="75"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sdJ-pD-rNl">
+                                        <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="sdJ-pD-rNl" secondAttribute="height" multiplier="1:1" id="EFo-PJ-XEX"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bRa-PS-xjf">
+                                        <rect key="frame" x="85" y="0.0" width="195" height="75"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="0.5507277397260274" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="sdJ-pD-rNl" secondAttribute="bottom" id="2Wd-Q6-A5s"/>
+                                    <constraint firstItem="sdJ-pD-rNl" firstAttribute="top" secondItem="0fK-rJ-ri4" secondAttribute="top" id="4AG-JG-hZC"/>
+                                    <constraint firstItem="sdJ-pD-rNl" firstAttribute="leading" secondItem="0fK-rJ-ri4" secondAttribute="leading" id="5Wd-qp-5HQ"/>
+                                    <constraint firstAttribute="bottom" secondItem="bRa-PS-xjf" secondAttribute="bottom" id="7hc-HE-E6z"/>
+                                    <constraint firstAttribute="trailing" secondItem="bRa-PS-xjf" secondAttribute="trailing" constant="20" id="OhW-wm-em1"/>
+                                    <constraint firstItem="bRa-PS-xjf" firstAttribute="centerY" secondItem="0fK-rJ-ri4" secondAttribute="centerY" id="Z5E-TZ-iVa"/>
+                                    <constraint firstItem="bRa-PS-xjf" firstAttribute="leading" secondItem="sdJ-pD-rNl" secondAttribute="trailing" constant="10" id="hHo-xh-M75"/>
+                                    <constraint firstItem="bRa-PS-xjf" firstAttribute="top" secondItem="0fK-rJ-ri4" secondAttribute="top" id="hVS-Qo-dPQ"/>
+                                </constraints>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Z2-eb-PPH">
+                                <rect key="frame" x="16" y="85" width="268" height="165"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="qCU-tM-pqV" firstAttribute="top" secondItem="Mia-xZ-V0E" secondAttribute="bottom" id="1yr-ah-0CI"/>
+                            <constraint firstItem="Mia-xZ-V0E" firstAttribute="top" secondItem="9Z2-eb-PPH" secondAttribute="bottom" constant="10" id="HKx-f0-Jj7"/>
+                            <constraint firstItem="9Z2-eb-PPH" firstAttribute="top" secondItem="0fK-rJ-ri4" secondAttribute="bottom" constant="10" id="PNw-fZ-qBA"/>
+                            <constraint firstItem="Mia-xZ-V0E" firstAttribute="leading" secondItem="AWe-yT-xWG" secondAttribute="leading" id="Tlb-ov-Mm3"/>
+                            <constraint firstAttribute="trailing" secondItem="Mia-xZ-V0E" secondAttribute="trailing" id="agi-Ug-0a8"/>
+                            <constraint firstItem="0fK-rJ-ri4" firstAttribute="height" secondItem="AWe-yT-xWG" secondAttribute="height" multiplier="0.25" id="cG9-il-eHs"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9Z2-eb-PPH" secondAttribute="trailing" id="d85-Kq-u8u"/>
+                            <constraint firstAttribute="trailing" secondItem="0fK-rJ-ri4" secondAttribute="trailing" id="fS1-ch-9NK"/>
+                            <constraint firstItem="0fK-rJ-ri4" firstAttribute="leading" secondItem="AWe-yT-xWG" secondAttribute="leading" id="gNq-wh-h5u"/>
+                            <constraint firstItem="0fK-rJ-ri4" firstAttribute="top" secondItem="VRr-mY-7ka" secondAttribute="bottom" id="mvf-Vg-W44"/>
+                            <constraint firstItem="9Z2-eb-PPH" firstAttribute="leading" secondItem="AWe-yT-xWG" secondAttribute="leadingMargin" id="p5Q-7t-u8L"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="topColor">
+                                <color key="value" red="0.32051244378089905" green="0.44379562139511108" blue="0.61407274007797241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="bottomColor">
+                                <color key="value" red="0.38247555494308472" green="0.52569097280502319" blue="0.7208971381187439" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                     <size key="freeformSize" width="300" height="300"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EnN-zg-RSk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3473" y="-690"/>
+            <point key="canvasLocation" x="3472.5" y="-690.84507042253517"/>
         </scene>
         <!--Register View Controller-->
         <scene sceneID="otE-p1-qGl">
